workspace = { members = ["galileo-src"] }
[package]
name = "maplibre-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.7", features = ["csr"] }
maplibre = "0.0.3"
maplibre-winit = "0.0.3"
js-sys = { version = "0.3.67", features = [] }
thiserror = "1.0.56"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
web-sys = { version = "=0.3.64", features = [
    "Window",
    "Worker", "WorkerGlobalScope", "DedicatedWorkerGlobalScope", "MessageEvent",
    "Request", "RequestInit", "RequestMode", "Response", "Headers",
    "ErrorEvent",
] }
async-trait = "0.1.77"
log = "0.4.20"
serde_json = "1.0.111"
image = "0.24.8"
flatbuffers = "23.5.26"
rand = "0.8.5"
