[package]
name = "galileo-src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.7", features = ["csr"] }
wasm-bindgen = { version = "0.2.90", features = [] }
serde_json = { version = "1.0.111", features = [] }
thread_local = "1.1.7"
tokio = "1.35.1"
env_logger = { version = "0.11.0", features = [] }
galileo = { version = "0.1.0-alpha.0", default-features = false, features = ["wgpu", "image", "web", "serde"] }
winit = { version ="0.29", features = ["rwh_05"] }
wasm-bindgen-futures = "0.4.40"
js-sys = "0.3.67"
log = "0.4.20"

console_error_panic_hook = "0.1"
console_log = "1.0"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
lazy_static = "1.4"